Initial fix for IE budget measures partition expand more text not being properly visible (black on near-black dark blue instead of white). I suspect there's something else wrong here though, I may have messed up some class names with a sloppy find and replace?

--- a/client/src/partition/budget_measures_subapp/BudgetMeasuresPartition.scss
+++ b/client/src/partition/budget_measures_subapp/BudgetMeasuresPartition.scss
@@ -14,12 +14,14 @@
   & > .partition-item {
     color: $textColor;
 
-    &.partition-item__overflowing > .partition-item--title {
+    &.partition-item__overflowing > .partition-item--title,
+    &.partition-item__overflowing > .partition-item--negative-title-backing__right_ie_fix > .partition-item--title {
       color: $textLightColor;
       font-weight: $mediumFontWeight;
     }
     
-    &:not(.partition-item__overflowing) > .partition-item--title {
+    &:not(.partition-item__overflowing) > .partition-item--title,
+    &:not(.partition-item__overflowing) > .partition-item--negative-title-backing__right_ie_fix > .partition-item--title {
       font-weight: $heavyFontWeight;
     }
 
